--- a/Flask/WebRTC/app/static/subscribe-Post.html
+++ b/Flask/WebRTC/app/static/subscribe-Post.html
@@ -1,5 +1,7 @@
 <html>
-<head>Subscription form</head>
+<head>
+    <title>Subscription form</title>
+</head>
 <body>
 <h2>Welcome!</h2>
 <p>Choose your account and insert data:</p>
