JavaScript and jQuery finished

--- a/JavaScript_and_jQuery/index.html
+++ b/JavaScript_and_jQuery/index.html
@@ -10,6 +10,10 @@
 <a href="03_image_onmouse.html">Image on mouse</a><br>
 <a href="04_form_validation.html">Client-side form validation</a><br>
 <a href="05_image_sequence.html">Sequence of images</a><br>
-<a href="06_jquery.html">A look at jQuery</a>
+<a href="06_jquery.html">A look at jQuery</a><br>
+<a href="07_user_function.html">User function example</a><br>
+<a href="08_toggle_div.html">Toggle div</a><br>
+<a href="09_navigator.html">Info about your navigator</a><br>
+<a href="10_dynamic.html">Dynamic toggle</a><br>
 </body>
 </html>
